# realworld-starter-kit

./: .env  Cargo.toml  bacon.toml  lefthook.yml  rest.http  sonar-project.properties
.github/workflows/: build.yml
crates/conduit-api/: Cargo.toml  README.md
crates/conduit-api/src/: application.rs  commands.rs  config.rs  errors.rs  jwt.rs  lib.rs  main.rs
crates/conduit-api/src/commands/: dump_config.rs  start.rs
crates/conduit-api/src/controllers/: article.rs  mod.rs  profile.rs  tags.rs  user.rs
crates/conduit-api/src/dto/: user.rs
crates/conduit-api/src/extractors/: authentication.rs
crates/conduit-api/src/repositories/: mod.rs  models.rs  user.rs
crates/conduit-api/src/routes/: articles.rs  profiles.rs  tags.rs  users.rs
crates/conduit-api/tests/: acceptance.rs
migrations/: 20230401160605_create_table_user.up.sql
