[workspace]
members = [
  # our runnable applications
  "crates/conduit-api",
]

[workspace.package]
edition = "2021"
version = "0.1.0"
authors = ["DatNguyen <datnt3696@gmail.com>"]
description = "Rust implement of conduit app"

[workspace.dependencies]
serde = { version = "1", features = ["serde_derive"] }
thiserror = "1"
eyre = "0.6.8"
color-eyre = "0.6.2"
