[package]
name = "conduit_api"
authors.workspace = true
version.workspace = true
edition.workspace = true

[dependencies]
axum = "0.6.10"
clap = "4"
sqlx = { version = "0.6", features = ["runtime-tokio-rustls"] }
serde.workspace = true
thiserror.workspace = true
eyre.workspace = true
color-eyre.workspace = true
abscissa_tokio = "0.7.0"

[dependencies.abscissa_core]
version = "0.7.0"
# optional: use `gimli` to capture backtraces
# see https://github.com/rust-lang/backtrace-rs/issues/189
# features = ["gimli-backtrace"]

[dev-dependencies]
abscissa_core = { version = "0.7.0", features = ["testing"] }
once_cell = "1.2"
