[package]
name = "conduit-api"
version = "0.1.0"
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde.workspace = true
thiserror.workspace = true
eyre.workspace = true
color-eyre.workspace = true
error-stack = "0.3.1"
sqlx = { version = "0.7.0-alpha.2", features = [
  "runtime-tokio",
  "tls-rustls",
  "postgres",
  "time",
] }
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
axum = { version = "0.6", features = ["headers"] }
lazy_static = "1.4.0"
dotenvy = "0.15.7"
clap = { version = "4.2.1", features = ["derive", "env"] }
tower-http = { version = "0.4.0", features = ["trace"] }
http = "0.2.9"
jsonwebtoken = "8.3.0"
